--- a/style/main.scss
+++ b/style/main.scss
@@ -1,10 +1,13 @@
 @import "helpers";
 @import "fonts/clear-sans.css";
 
-$field-width: 500px;
 $grid-spacing: 15px;
-$grid-row-cells: 4;
-$tile-size: ($field-width - $grid-spacing * ($grid-row-cells + 1)) / $grid-row-cells;
+$grid-row-cells: 3;
+$grid-col-cells: 4;
+$tile-size: 70px;
+  // $tile-size: ($field-width - $grid-spacing * ($grid-row-cells + 1)) / $grid-row-cells;
+$field-width: $tile-size * $grid-col-cells + $grid-spacing * ($grid-col-cells + 1);
+$field-height: $tile-size * $grid-row-cells + $grid-spacing * ($grid-row-cells + 1);
 $tile-border-radius: 3px;
 
 $mobile-threshold: $field-width + 20px;
@@ -188,7 +191,7 @@ hr {
     background: $game-container-background;
     border-radius: $tile-border-radius * 2;
     width: $field-width;
-    height: $field-width;
+    height: $field-height;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -296,7 +299,7 @@ hr {
     }
 
     // Build position classes
-    @for $x from 1 through $grid-row-cells {
+    @for $x from 1 through $grid-col-cells {
       @for $y from 1 through $grid-row-cells {
         &.tile-position-#{$x}-#{$y} {
           $xPos: floor(($tile-size + $grid-spacing) * ($x - 1));
@@ -476,7 +479,8 @@ hr {
   // Redefine variables for smaller screens
   $field-width: 280px;
   $grid-spacing: 10px;
-  $grid-row-cells: 4;
+  $grid-row-cells: 3;
+  $grid-col-cells: 4;
   $tile-size: ($field-width - $grid-spacing * ($grid-row-cells + 1)) / $grid-row-cells;
   $tile-border-radius: 3px;
   $game-container-margin-top: 17px;
